# linkedin-message-drafter

./: .env.example  .gitignore  README.md  SOP.md  TUTORIAL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
integrations/: chatgpt-action-openapi.yaml
skills/linkedin-drafter/: SKILL.md
src/linkedin_message_drafter/: __init__.py  ai.py  cadence.py  cli.py  drafts.py  linkedin.py  mcp_server.py  web.py
src/linkedin_message_drafter/examples/: prospect.json  prospects.csv
tests/: test_cadence.py  test_cli.py  test_drafts.py
